# Kolibri_AI3D

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  collision.rs  installer.iss  stderr.txt  stderr_out.txt  test_input.json
.claude/: settings.local.json
app/: Cargo.toml  build.rs  kolibri_ux_upgrade_plan.md  mcp_test.k3d  scene_export.json  test_all_entities.dxf  test_log.txt
app/assets/sketchup_bridge/: kolibri_skp_bridge.rb
app/assets/sketchup_bridge/kolibri_skp_bridge/: main.rb
app/src/: ai_assist.rs  ai_log.rs  app.rs  camera.rs  collision.rs  csg.rs  dimensions.rs  dxf_io.rs  editor.rs  file_io.rs  gltf_io.rs  halfedge.rs  hybrid.rs  icons.rs  import_review.rs  inference.rs  inference_engine.rs  layout.rs  main.rs  mcp_http_bridge.rs  mcp_server.rs  measure.rs  menu.rs  obj_io.rs  overlay.rs  panels.rs  preview.rs  renderer.rs  scene.rs  scene_hierarchy.rs  snap.rs  stl_io.rs  svg_icons.rs  test_bridge.rs  texture_manager.rs  tools.rs  viewer.rs
app/src/app/: commands.rs  import_tasks.rs  mcp_handler.rs  mod.rs  update.rs  update_ui.rs
app/src/builders/: mod.rs  steel_builder.rs
app/src/cad_import/: dxf_importer.rs  elevation_parser.rs  grid_parser.rs  import_validator.rs  mod.rs  semantic_detector.rs  steel_parser.rs
app/src/cad_import/dxf_importer/: mod.rs
app/src/dwg_parser/: bitreader.rs  entities.rs  header.rs  mod.rs  r2018.rs  sections.rs
app/src/import/: dwg_importer.rs  dwg_parser.rs  import_cache.rs  import_manager.rs  mod.rs  pdf_parser.rs  sketchup_bridge_backend.rs  skp_backend.rs  skp_importer.rs  skp_sdk_import.rs  unified_ir.rs
app/src/overlay/: cursor.rs  gizmo.rs  guides.rs  hud.rs  mod.rs  navigation.rs
app/src/panels/: ai_analysis.rs  draft_canvas.rs  material_swatches.rs  mod.rs  ribbon.rs  steel_conn_dialog.rs  tab_help.rs  tab_properties.rs  tab_scene.rs  toolbar.rs
app/src/renderer/: helpers.rs  mesh_builder.rs  mod.rs  pipeline.rs  primitives.rs  shaders.rs
app/src/tools/: click.rs  click_draw.rs  click_edit.rs  geometry_ops.rs  keyboard.rs  measure.rs  menu_actions.rs  mod.rs  picking.rs  rotation_math.rs  steel_conn_helpers.rs  steel_connections.rs  steel_exports.rs  viewport.rs
crates/core/: Cargo.toml
crates/drafting/: Cargo.toml
crates/io/: Cargo.toml
crates/io/src/: dxf_io.rs  gltf_io.rs  ifc_export.rs  lib.rs  nc_export.rs  obj_io.rs  pdf_export.rs  stl_io.rs
crates/io/src/cad_import/: drawing_classifier.rs  elevation_parser.rs  geometry_parser.rs  grid_parser.rs  ir.rs  preprocessor.rs  semantic_detector.rs  steel_parser.rs
crates/io/src/cad_import/dxf_importer/: entity_parsers.rs  parser.rs  tests.rs  types.rs
crates/io/src/dwg_parser/: decompress.rs  entities.rs  header.rs  mod.rs  objects.rs  sections.rs  version.rs
crates/io/src/import/: dwg_parser.rs  import_manager.rs  mod.rs  pdf_parser.rs  skp_importer.rs  unified_ir.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: adapter.rs  dashboard.rs  lib.rs  protocol.rs  transport_http.rs  transport_stdio.rs
crates/piping/: Cargo.toml
crates/skp/: Cargo.toml
crates/skp/src/: converter.rs  exporter.rs  ffi.rs  lib.rs
docs/: DXF_TEST0305.dxf  INFERENCE_INTERACTION_UPGRADE.md  K3D_Geometry_Normalization_v1GPT.md  K3D_Scaffold_Plugin_GPTv0.1.md  K3D_Steel_Plugin_GPT_Design_v0.1.md  MCP_SERVER.md  ROADMAP.md  STEEL_DETAILING_ROADMAP.md  STEEL_TEKLA_COMPARISON.md  dxf_importer.rs  import_validator.rs
docs/CAD_icons/: README.txt  preview.html
docs/Steel_doc/: Steel_dimension.xlsx
docs/cad-mcp-server/: Cargo.toml  README.md  setup.sh
docs/cad-mcp-server/src/: main.rs
docs/cad-mcp-server/src/mcp/: mod.rs
docs/cad-mcp-server/src/scene/: collision.rs  geometry.rs  material_properties.rs  mod.rs  operations.rs  state.rs
docs/project/: BACKLOG.md  CAD_IMPORT_PLAN.md  COMPONENT_EDITING_STATUS.md  DEVELOPMENT_STATUS.md  DEV_PROGRESS_0324.md  DEV_SUMMARY.md  ENCODING_MARKING_GUIDE.md  IMPORT_DESIGN.md  Kolibri_Ai3D_DWG_正確解析與穩定匯入設計建議.md  LEFT_PANEL_STEEL_TOOLS.md  MCP_SETUP.md  PLUGIN_AND_MCP.md  PLUGIN_API.md  PLUGIN_SYSTEM.md  ROADMAP.md  SDK.md  SKP_APP_RESTORE_PROGRESS_2026_03_28.md  SKP_IMPORT_CRASH_HANDOFF_2026_03_27.md  SKP_IMPORT_RESEARCH.md  SKP_STATUS_UPDATE_2026_03_27.md  SU_DIFF.md  TODO_NEXT.md  kolibri_ai_3_d：dwg_skp_file_import.md  kolibri_ux_upgrade_plan.md  rust_module_scoring_engine_ui_flow.md
docs/sample/: A201_空橋樓梯建築圖.dwg  A201_空橋樓梯建築圖.dwl  SKP_IMPORT.skb  SKP_IMPORT_TEST.skb  Sample_2000.dwg  Sample_2004.dwg  Sample_2010.dwg  Sample_2013.dwg  Sample_2018.dwg  (+16 more)
logs/: _test_ids.json  debug_trace_1775177842.json  debug_trace_1775178199.json  debug_trace_1775178401.json  debug_trace_1775179249.json  debug_trace_1775179612.json  debug_trace_1775179867.json  debug_trace_1775180219.json  debug_trace_1775182521.json  debug_trace_1775183109.json  debug_trace_1775183199.json  debug_trace_1775183654.json  debug_trace_1775183852.json  debug_trace_1775184018.json  debug_trace_1775186868.json  debug_trace_1775187260.json  debug_trace_1775187308.json  debug_trace_1775187519.json  debug_trace_1775187678.json  debug_trace_1775187983.json  debug_trace_1775188112.json  debug_trace_1775188196.json  debug_trace_1775188439.json  debug_trace_1775210752.json  debug_trace_1775211444.json  debug_trace_1775212399.json  debug_trace_1775212469.json  debug_trace_1775213133.json  debug_trace_1775216601.json  debug_trace_1775217241.json  debug_trace_1775218473.json  debug_trace_1775218527.json  debug_trace_1775219858.json  debug_trace_1775219968.json  debug_trace_1775220715.json  debug_trace_1775221824.json  debug_trace_1775223221.json  debug_trace_1775223530.json  debug_trace_1775224142.json  debug_trace_1775225528.json  (+21 more)
(+578 files in other folders)
