[package]
name = "kolibri-cad"
version = "0.1.0"
edition = "2021"

# Windows: 隱藏 CMD 視窗
[target.'cfg(windows)'.rustflags]

[[bin]]
name = "kolibri-cad"
path = "src/main.rs"

[dependencies]
kolibri-core = { path = "../crates/core" }
kolibri-io = { path = "../crates/io" }
kolibri-mcp = { path = "../crates/mcp" }
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
glam = "0.28"
bytemuck = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
rfd = "0.14"
zip = "0.6"
flate2 = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
rstar = "0.12"
