[package]
name = "kolibri-cad"
version = "0.1.0"
edition = "2021"

# Windows: 隱藏 CMD 視窗
[target.'cfg(windows)'.rustflags]

[[bin]]
name = "kolibri-cad"
path = "src/main.rs"

[dependencies]
kolibri-core = { path = "../crates/core" }
kolibri-io = { path = "../crates/io" }
kolibri-mcp = { path = "../crates/mcp" }
kolibri-skp = { path = "../crates/skp" }
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
glam = "0.28"
bytemuck = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
rfd = "0.14"
zip = "0.6"
flate2 = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
rstar = "0.12"
rayon = "1"
sysinfo = "0.30"
kolibri-piping = { path = "../crates/piping", optional = true }
kolibri-drafting = { path = "../crates/drafting", optional = true }
resvg = { version = "0.44", optional = true }

[features]
default = ["steel", "piping", "drafting"]
steel = []
piping = ["dep:kolibri-piping"]
drafting = ["dep:kolibri-drafting", "dep:resvg"]
