[package]
name = "kolibri-skp"
version = "0.1.0"
edition = "2021"

[dependencies]
kolibri-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8"
tracing = "0.1"
thiserror = "2"

[[bin]]
name = "kolibri-skp-test"
path = "src/bin/test_sdk.rs"

[[bin]]
name = "kolibri-skp-scene-test"
path = "src/bin/test_import_scene.rs"

[[bin]]
name = "kolibri-skp-diag"
path = "src/bin/skp_diag.rs"

[[bin]]
name = "kolibri-skp-face-diag"
path = "src/bin/skp_face_diag.rs"

[[bin]]
name = "kolibri-skp-raw-faces"
path = "src/bin/skp_raw_faces.rs"

[[bin]]
name = "kolibri-skp-worker"
path = "src/bin/skp_worker.rs"
