[package]
name    = "cad-mcp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cad-mcp-server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio        = { version = "1",    features = ["full"] }

# Serialization
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"

# Error handling
anyhow       = "1"
thiserror    = "1"

# Logging
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID for object IDs
uuid         = { version = "1", features = ["v4"] }

# Math
glam         = "0.28"
nalgebra     = "0.32"

# Collision detection (industry standard Rust library)
parry3d      = "0.13"
